--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             margin: 0;
+
             font: 14px/1.5 Arial;
             color: #666;
             background: #efefef;
@@ -28,8 +29,8 @@
             display: flex;
             flex-wrap: wrap;
             background: #fff;
-            margin-top: 10px;
-            margin-bottom: 10px;
+            /* margin-top: 10px;
+            margin-bottom: 10px; */
         }
 
         header {
@@ -308,18 +309,24 @@
                         <li>项目源码:<a href="https://github.com/angmieee/vue-cnode"
                                 target="_blank">https://github.com/angmieee/vue-cnode</a>
                         </li>
-                        <li>项目预览: <a href="https://jirengu.com">点击查看</a></li>
+                        <li>项目预览: <a href="https://angmieee.github.io/vue-cnode/dist/index.html#/"
+                                target="_blank">https://angmieee.github.io/vue-cnode/dist/index.html</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>小程序番茄闹钟</h3>
+                    <h3>vue实现todolist</h3>
                     <ul>
                         <li>项目介绍：
-
+                            该项目使用vue实现todolist应用，以<span
+                                class="red">vue-cli</span>创建项目模板，使用vue组件完成项目的模块化开发，Webpack打包完成<span
+                                class="red">工程化</span>开发。
                         </li>
-                        <li>技术栈：</li>
-                        <li>项目源码:<a href="" target="_blank">点击查看</a></li>
-                        <li>项目预览: <a href="" target="_blank">点击查看</a></li>
+                        <li><strong>技术栈：vue、vue-cli、webpack、es6</strong></li>
+                        <li>项目源码:<a href="https://github.com/angmieee/todo-app"
+                                target="_blank">https://github.com/angmieee/todo-app</a></li>
+                        <li>项目预览: <a href="https://angmieee.github.io/todo-app/dist/index.html"
+                                target="_blank">https://angmieee.github.io/todo-app/dist/index.html</a></li>
                     </ul>
                 </div>
                 <div class="item">
