--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="layout" id="page">
         <header>
             <h1>黄苗杰</h1>
-            <p>应聘前端工程师(实习)</p>
+            <p>应聘前端工程师</p>
         </header>
         <aside>
             <div class="avatar">
@@ -319,7 +319,7 @@
                     <ul>
                         <li>项目介绍：
                             该项目使用vue实现todolist应用，以<span class="red">vue-cli</span>创建项目模板，使用vue组件完成项目的模块化开发，利用<span
-                                class="red">组件通信</span>实现项目功能，Webpack打包完成<span class="red">工程化</span>开发。
+                                class="red">组件通信</span>实现todo的增加和删除功能，Webpack打包完成<span class="red">工程化</span>开发。
                         </li>
                         <li><strong>技术栈：vue、vue-cli、webpack、es6</strong></li>
                         <li>项目源码:<a href="https://github.com/angmieee/todo-app"
