--- a/index.html
+++ b/index.html
@@ -300,15 +300,15 @@
                 <p>熟悉原生JavaScript，会使用<span class="red">ES6+</span>常用规范，了解jQuery常用API</p>
                 <p>熟悉Vue常用功能，理解如<span class="red">生命周期、组件、虚拟 DOM、数据响应式</span>等概念，能够使用Vue全家桶开发项目</p>
                 <p>熟悉<span class="red">模块化、工程化</span>开发流程，能够配置<span class="red">Webpack</span></p>
-                <p>有移动端开发经验，会使用<span class="red">REM、vw/vh、响应式</span>等技术制作适配手机设备的页面</p>
+                <p>有移动端开发经验，会使用<span class="red">rem、vw/vh、响应式</span>等技术制作适配手机设备的页面</p>
                 <p>了解<span class="red">HTTP</span>相关知识，了解常见的<span class="red">Web性能优化</span>方案</p>
                 <p>了解<span class="red">Node.js</span>，能够开发简单的后台服务器</p>
-                <p>熟练使用<span class="red">VsCode、WebStorm、Git</span>等开发工具</p>
+                <p>熟练使用<span class="red">VS Code、WebStorm、Git</span>等开发工具</p>
             </section>
 
             <section>
                 <h2>项目经历</h2>
-                <div class="item">
+                <!-- <div class="item">
                     <h3>Augmi UI 框架</h3>
                     <ul>
                         <li>项目介绍：
@@ -329,36 +329,38 @@
                                 target="_blank">https://angmieee.github.io/augmi-ui/</a>
                         </li>
                     </ul>
+                </div> -->
+                <div class="item break">
+                    <h3>微信小程序：抖番茄电影</h3>
+                    <ul>
+                        <li>项目介绍：
+                            该项目是使用<span class="red">微信小程序原生</span>语法开发的一款<span class="red">新闻、影评</span>应用，该应用实现了<span
+                                class="red">新闻、电影</span>两个<span
+                                class="red">模块</span>，完成了热点轮播、详情页、页面跳转、下拉刷新、实时搜索等功能，使用了第三方提供的后端接口实现<span
+                                class="red">数据动态更新</span>。
+
+                        </li>
+                        <li>项目源码:<a href="https://github.com/angmieee/shaking-tomato-mini-program"
+                                target="_blank">https://github.com/angmieee/shaking-tomato-mini-program</a></li>
+                        <li>项目预览: <a href="https://github.com/angmieee/shaking-tomato-mini-program"
+                                target="_blank">https://github.com/angmieee/shaking-tomato-mini-program</a></li>
+                    </ul>
                 </div>
                 <div class="item">
                     <h3>Vue技术栈实现Cnode社区</h3>
                     <ul>
                         <li>项目介绍：
-                            该项目使用Vue还原CNode官方社区，项目调用CNode官方社区提供的API，以<span class="red">vue-cli</span>创建项目模版，使用<span
-                                class="red">Axios</span>获取数据，使用<span class="red">vue-router</span>进行前端路由的切换及传参，使用<span
-                                class="red">watch</span>监听路由的变化，Webpack打包。
+                            该项目使用Vue还原CNode官方社区，项目调用CNode官方社区提供的API，以<span class="red">Vue CLI</span>创建项目模版，使用<span
+                                class="red">Axios</span>获取数据，使用<span class="red">Vue
+                                Router</span>进行前端路由的切换及传参，使用Vue的侦听属性<span class="red">watch</span>监听路由的变化，Webpack打包。
                         </li>
-                        <li>技术栈：<strong>vue、vue-cli、axios、vue-router、vuex、webpack、es6</strong></li>
+                        <li>技术栈：<strong>Vue、Vue CLI、Axios、Vue Router、Vuex、Webpack、ES6</strong></li>
                         <li>项目源码:<a href="https://github.com/angmieee/vue-cnode"
                                 target="_blank">https://github.com/angmieee/vue-cnode</a>
                         </li>
                         <li>项目预览: <a href="https://angmieee.github.io/vue-cnode/dist/index.html#/"
                                 target="_blank">https://angmieee.github.io/vue-cnode/dist/index.html</a>
                         </li>
-                    </ul>
-                </div>
-                <div class="item break">
-                    <h3>Vue实现TodoList</h3>
-                    <ul>
-                        <li>项目介绍：
-                            该项目使用vue实现TodoList应用，以<span class="red">vue-cli</span>创建项目模板，使用Vue组件完成项目的模块化开发，利用<span
-                                class="red">组件通信</span>实现todo的增加和删除功能，Webpack打包完成<span class="red">工程化</span>开发。
-                        </li>
-                        <li><strong>技术栈：vue、vue-cli、webpack、es6</strong></li>
-                        <li>项目源码:<a href="https://github.com/angmieee/todo-app"
-                                target="_blank">https://github.com/angmieee/todo-app</a></li>
-                        <li>项目预览: <a href="https://angmieee.github.io/todo-app/dist/index.html"
-                                target="_blank">https://angmieee.github.io/todo-app/dist/index.html</a></li>
                     </ul>
                 </div>
                 <div class="item">
@@ -395,7 +397,7 @@
                 <h2>教育经历</h2>
                 <div class="item">
                     <h3>武汉工程科技学院</h3>
-                    <p>计算机科学与技术 | 大三</p>
+                    <p>计算机科学与技术 | 大四</p>
                     <p>2016-2020</p>
                 </div>
             </section>
