--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         @media print {
             div.break {
                 page-break-before: always;
-                margin-top: -120px;
+                margin-top: -150px;
             }
 
 
@@ -330,7 +330,7 @@
                         </li>
                     </ul>
                 </div> -->
-                <div class="item break">
+                <div class="item">
                     <h3>微信小程序：抖番茄电影</h3>
                     <ul>
                         <li>项目介绍：
@@ -347,7 +347,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Vue技术栈实现Cnode社区</h3>
+                    <h3>Vue技术栈实现CNode社区</h3>
                     <ul>
                         <li>项目介绍：
                             该项目使用Vue还原CNode官方社区，项目调用CNode官方社区提供的API，以<span class="red">Vue CLI</span>创建项目模版，使用<span
@@ -363,20 +363,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="item">
-                    <h3>CSS涂鸦</h3>
-                    <ul>
-                        <li>项目介绍：
-                            是一个使用<span class="red">原生JS</span>开发的，动态显示CSS画一个皮卡丘过程的小作品。该作品主要思路是<span
-                                class="red">通过间隔计时器遍历预先设置在preview标签内代码</span>，将其一个个显示在页面上，并在style标签上作同样处理，以使代码CSS
-                            生效。除此之外，还实现了CSS高亮效果及调速功能。
-                        </li>
-                        <li>项目源码:<a href="https://github.com/angmieee/draw-a-pikachu"
-                                target="_blank">https://github.com/angmieee/draw-a-pikachu</a></li>
-                        <li>项目预览: <a href="https://angmieee.github.io/draw-a-pikachu/index.html"
-                                target="_blank">https://angmieee.github.io/draw-a-pikachu/index.html</a></li>
-                    </ul>
-                </div>
                 <div class="item" class="page-break">
                     <h3>创意画板</h3>
                     <ul>
@@ -389,6 +375,20 @@
                                 target="_blank">https://github.com/angmieee/canvas-demo</a></li>
                         <li>项目预览:<a href="https://angmieee.github.io/canvas-demo/index.html"
                                 target="_blank">https://angmieee.github.io/canvas-demo/index.html</a></li>
+                    </ul>
+                </div>
+                <div class="item break">
+                    <h3>CSS涂鸦</h3>
+                    <ul>
+                        <li>项目介绍：
+                            是一个使用<span class="red">原生JS</span>开发的，动态显示CSS画一个皮卡丘过程的小作品。该作品主要思路是<span
+                                class="red">通过间隔计时器遍历预先设置在preview标签内代码</span>，将其一个个显示在页面上，并在style标签上作同样处理，以使代码CSS
+                            生效。除此之外，还实现了CSS高亮效果及调速功能。
+                        </li>
+                        <li>项目源码:<a href="https://github.com/angmieee/draw-a-pikachu"
+                                target="_blank">https://github.com/angmieee/draw-a-pikachu</a></li>
+                        <li>项目预览: <a href="https://angmieee.github.io/draw-a-pikachu/index.html"
+                                target="_blank">https://angmieee.github.io/draw-a-pikachu/index.html</a></li>
                     </ul>
                 </div>
             </section>
