--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="item">
                         <svg>
                             <use xlink:href="#icon-email" /></svg>
-                        <span>369822144@qq.com</span>
+                        <span>mjhuang1072@foxmail.com</span>
                     </div>
                     <div class="item">
                         <svg>
