--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         section {
             border-bottom: 1px solid #ccc;
-            margin: 30px 20px 0 20px;
+            margin: 30px 10px 0 20px;
             padding-bottom: 20px;
         }
 
@@ -112,6 +112,7 @@
         .skills .item {
             display: flex;
             align-items: center;
+            margin-right: 10px;
         }
 
         .skills .keyword {
@@ -194,6 +195,10 @@
             margin: 0;
             padding: 0;
         }
+
+        /* section.info {
+            margin: 30px 10px 0 20px;
+        } */
     </style>
 </head>
 
@@ -249,7 +254,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="info">
                 <h2>联系方式</h2>
                 <div class="detail contact">
                     <div class="item">
