添加移动端适配

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             min-height: calc(100vh - 162px);
         }
 
-        /* @media (max-width: 768px) {
+        @media (max-width: 768px) {
             header {
                 padding-top: 20px;
                 padding-bottom: 90px;
@@ -166,7 +166,7 @@
                 width: 100px;
                 height: 100px;
             }
-        } */
+        }
 
         @media print {
             div.break {
