--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
                 <div class="detail contact">
                     <div class="item fix">
                         <span class="iconfont icon-github"></span>
-                        <span><a href="https://github.com/angmieee">Github</a></span>
+                        <span><a href="https://github.com/angmieee" target="_blank">Github</a></span>
                     </div>
                     <div class="item fix">
                         <span class="iconfont icon-blog"></span>
-                        <span><a href="https://www.jianshu.com/u/45e1d6cbd0f1">博客</a></span>
+                        <span><a href="https://www.jianshu.com/u/45e1d6cbd0f1" target="_blank">博客</a></span>
                     </div>
 
                 </div>
@@ -357,14 +357,15 @@
                         <li>项目介绍：
                             该项目使用Vue还原CNode官方社区，项目调用CNode官方社区提供的API，以<span class="red">Vue CLI</span>创建项目模版，使用<span
                                 class="red">Axios</span>获取数据，使用<span class="red">Vue
-                                Router</span>进行前端路由的切换及传参，使用Vue的侦听属性<span class="red">watch</span>监听路由的变化，Webpack打包。
+                                Router</span>前端路由进行组件切换及数据传递，引入<span class="red">ElementUI</span>的<span
+                                class="red">Pagination</span>组件完成分页功能，Webpack打包<span class="red">部署上线</span>到GitHub。
                         </li>
-                        <li>技术栈：<strong>Vue、Vue CLI、Axios、Vue Router、Vuex、Webpack、ES6</strong></li>
+                        <li>技术栈：<strong>Vue、Vue CLI、Axios、ElementUI、Vue Router、Webpack、ES6</strong></li>
                         <li>项目源码:<a href="https://github.com/angmieee/vue-cnode"
                                 target="_blank">https://github.com/angmieee/vue-cnode</a>
                         </li>
-                        <li>项目预览: <a href="https://angmieee.github.io/vue-cnode/dist/index.html#/"
-                                target="_blank">https://angmieee.github.io/vue-cnode/dist/index.html</a>
+                        <li>项目预览: <a href="https://angmieee.github.io/vue-cnode/dist/"
+                                target="_blank">https://angmieee.github.io/vue-cnode/dist/</a>
                         </li>
                     </ul>
                 </div>
