--- a/index.html
+++ b/index.html
@@ -299,21 +299,22 @@
         <main>
             <section class="about">
                 <h2>关于我</h2>
-                <p>熟练HTML、DIV+CSS的<span class="red">页面布局</span>，能根据设计图<span class="red">像素级</span>完成页面制作</p>
-                <p>熟悉<span class="red">HTML5及语义化</span>，了解<span class="red">Canvas</span>动画制作，掌握<span
-                        class="red">CSS3动画、过渡</span>效果等常用技术</p>
-                <p>熟悉原生JavaScript，会使用<span class="red">ES6+</span>常用规范，了解jQuery常用API</p>
-                <p>熟悉Vue常用功能，理解如<span class="red">生命周期、组件、虚拟 DOM、数据响应式</span>等概念，能够使用Vue全家桶开发项目</p>
-                <p>熟悉<span class="red">模块化、工程化</span>开发流程，能够配置<span class="red">Webpack</span></p>
-                <p>有移动端开发经验，会使用<span class="red">rem、vw/vh、响应式</span>等技术制作适配手机设备的页面</p>
-                <p>了解<span class="red">HTTP、AJAX</span>相关知识，了解常见的<span class="red">Web性能优化</span>方案</p>
-                <p>熟悉<span class="red">微信小程序</span>，有使用小程序原生开发项目的经验</p>
-                <p>熟练使用<span class="red">VS Code、WebStorm、Git</span>等开发工具</p>
+                <p>熟练使用 HTML、CSS 进行<span class="red">页面布局</span>，能根据设计图<span class="red">像素级</span>完成页面制作</p>
+                <p>熟悉<span class="red"> HTML5 及语义化</span>，使用过<span class="red"> Canvas </span>开发项目，掌握<span
+                        class="red"></span>
+                    CSS3 动画、过渡</span>效果等常用技术</p>
+                <p>熟悉原生 JavaScript ，会使用<span class="red"> ES6+ </span>常用规范，了解 jQuery 常用API</p>
+                <p>熟悉 Vue 常用功能，理解如<span class="red">生命周期、组件化开发、数据响应式</span>等概念，能够使用 Vue 全家桶开发项目</p>
+                <p>熟悉<span class="red">模块化、工程化</span>开发流程，能够配置<span class="red"> Webpack </span></p>
+                <!-- <p>有移动端开发经验，会使用<span class="red">rem、vw/vh、响应式</span>等技术制作适配手机设备的页面</p> -->
+                <p>熟悉<span class="red"> HTTP、AJAX </span>相关知识，了解常见的<span class="red"> Web 性能优化</span>方案</p>
+                <p>熟悉<span class="red">微信小程序</span>开发，有使用小程序原生开发项目的经验</p>
+                <p>熟练使用<span class="red"> VS Code、WebStorm、Git </span>等开发工具</p>
             </section>
 
             <section>
                 <h2>项目经历</h2>
-                <!-- <div class="item">
+                <div class="item">
                     <h3>Augmi UI 框架</h3>
                     <ul>
                         <li>项目介绍：
@@ -334,7 +335,8 @@
                                 target="_blank">https://angmieee.github.io/augmi-ui/</a>
                         </li>
                     </ul>
-                </div> -->
+                </div>
+
                 <div class="item">
                     <h3>微信小程序：抖番茄</h3>
                     <ul>
@@ -352,7 +354,7 @@
                                 target="_blank">https://github.com/angmieee/tomato-mini-program</a></li>
                     </ul>
                 </div>
-                <div class="item">
+                <div class="item break">
                     <h3>Vue技术栈实现CNode社区</h3>
                     <ul>
                         <li>项目介绍：
@@ -370,7 +372,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="item" class="page-break">
+                <div class="item">
                     <h3>创意画板</h3>
                     <ul>
                         <li>项目介绍：
@@ -384,7 +386,7 @@
                                 target="_blank">https://angmieee.github.io/canvas-demo/index.html</a></li>
                     </ul>
                 </div>
-                <div class="item break">
+                <!-- <div class="item break">
                     <h3>CSS涂鸦</h3>
                     <ul>
                         <li>项目介绍：
@@ -397,7 +399,7 @@
                         <li>项目预览: <a href="https://angmieee.github.io/draw-a-pikachu/index.html"
                                 target="_blank">https://angmieee.github.io/draw-a-pikachu/index.html</a></li>
                     </ul>
-                </div>
+                </div> -->
             </section>
 
             <section>
